<resources>
    <string name="app_name">NhatNguyen</string>
    <string name="textview_email_address">Email address</string>
    <string name="textview_welcome_back">Welcome Back!</string>
    <string name="textview_please_login_to_continue">Please login to continue.</string>
    <string name="textview_password">Password</string>
    <string name="edittext_user_email_com">user@email.com</string>
    <string name="textview_forget_password">Forget password?</string>
    <string name="edittext_12345678">12345678</string>
    <string name="textview_login">Login</string>
    <string name="textview_new_to_scatch">New to Scatch?</string>
    <string name="textview_create_account_here">Create Account Here</string>
    <string name="textview_start_nfrom_scratch">Start\nfrom Scratch</string>
    <string name="textview_create_account_to_continue">Create account to continue.</string>
    <string name="textview_fullname">Full Name</string>
    <string name="edittext_fullname">Nich Evans</string>
    <string name="textview_create_account">Create Account</string>
    <string name="textview_already_have_an_account">Already have an account?</string>
    <string name="textview_login_here">Login Here</string>
    <string name="edittext_hint_password">Password</string>
    <string name="edittext_hint_email_address">Email address</string>
    <string name="textview_edit_profile">Edit Profile</string>
    <string name="textview_back_to_profile">Back to Profile</string>
    <string name="textview_edit_profle_picture">Edit Profle Picture</string>
    <string name="textview_full_name">Full Name</string>
    <string name="edit_hint_your_name">Your Name</string>
    <string name="textview_bio">Bio</string>
    <string name="edittext_hint_bio">Bio</string>
    <string name="edittext_potato_master">Potato Master</string>
    <string name="textview_private_infomation">Private Information</string>
    <string name="textview_email">Email</string>
    <string name="textview_phone">Phone</string>
    <string name="edittext_1_234_567_89">+1 234 567 89</string>
    <string name="edittext_hint_input_phone_number">Input Phone Number</string>
    <string name="textview_save_profile">Save Profile</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="textview_hauhc93_gmail_com">hauhc93@gmail.com</string>
    <string name="textview_my_kitchen">My Kitchen</string>
    <string name="textview_potato_master">Potato Master</string>
    <string name="textview_584_followers">584 followers</string>
    <string name="textview_settings">\tSettings</string>
    <string name="textview_23k_likes">23k likes</string>
    <string name="textview_12_likes">12 likes</string>
    <string name="textview_comment">Comment</string>
    <string name="textview_12">12</string>
    <string name="textview_likes">Likes</string>
    <string name="username_michel">Michel Jackson</string>
    <string name="username_beb">Bebe Rexha</string>
    <string name="username_adam">Adam Sandler</string>
    <string name="username_jack">Jack Maron</string>
    <string name="username_eddie">Eddie Murphy</string>
    <string name="username_john">John Snow</string>
    <string name="username_jay">Jay Witch</string>
    <string name="username_tom">Tom Bee</string>
    <string name="username_josh">Josh Edd</string>
    <string name="username_tony">Tony Jame</string>
    <string name="preview_1">Bake an impressive dinner party dessert with minimum fuss – these chocolate puddings, also known as chocolate fondant or lava cake, have a lovely gooey centre</string>
    <string name="preview_2">Using simple storecupboard and freezer ingredients, this pea and chorizo risotto makes an easy midweek meal. Garnish with crisped chorizo and grated parmesan</string>
    <string name="preview_3">A crispy pie that you can adapt for your needs, add chicken or keep it veggie. A good fail-safe for your repertoire</string>
    <string name="preview_4">This high fibre dish counts as 3 of your 5-a-day, with a creamy and spicy curried sauce</string>
    <string name="preview_5">In need of a quick fix? Go Tex-Mex with these fish fajitas that\'ll feed four in less than 15 minutes!...</string>
    <string name="preview_6">This colourful, flavour-packed pizza is a great storecupboard supper with only five ingredients</string>
    <string name="preview_7">Not for risotto purists - this simple recipe has just a few ingredients and the stock is added all in one go</string>
    <string name="preview_8">This southern Italian dish is made with just five ingredients - just use the best tomatoes and bacon you can find</string>
    <string name="preview_9">A classic combination of flavours for a comforting family meal, with just five ingredients</string>
    <string name="preview_10">This springtime pasta dish requires just four ingredients. The perfect, fuss-free feast with a creamy sauce and pork meatballs that\'s bound to be a hit...</string>
    <string name="textview_chocola">Chocola</string>
    <string name="textview_like">%d Likes</string>
</resources>

