<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgAvatar"
            android:layout_width="@dimen/dimen_96"
            android:layout_height="@dimen/dimen_96"
            android:layout_marginTop="@dimen/margin_top_20"
            android:src="@drawable/ic_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditProfile"
            tools:ignore="RedundantNamespace" />

        <TextView
            android:id="@+id/tvEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_edit_profile"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llBack" />

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:layout_marginTop="@dimen/height_64"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_top_16"
                android:gravity="center"
                android:src="@drawable/ic_logo"
                android:text="@string/textview_back_to_profile" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvEditProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_20"
            android:gravity="center"
            android:text="@string/textview_edit_profle_picture"
            android:textColor="@color/color_green"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:text="@string/textview_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditProfilePicture" />

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_40"
            android:hint="@string/edit_hint_your_name"
            android:inputType="text"
            android:text="@string/edittext_fullname"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFullName"
            tools:ignore="Autofill,UnusedAttribute" />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFullName" />

        <EditText
            android:id="@+id/edtBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_40"
            android:hint="@string/edittext_hint_bio"
            android:inputType="text"
            android:text="@string/edittext_potato_master"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBio"
            tools:ignore="Autofill,UnusedAttribute" />

        <TextView
            android:id="@+id/tvPrivateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_private_infomation"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtBio" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrivateInfo" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_40"
            android:hint="@string/edittext_hint_email_address"
            android:inputType="textEmailAddress"
            android:text="@string/edittext_user_email_com"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            tools:ignore="Autofill,UnusedAttribute" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_40"
            android:hint="@string/edittext_hint_input_phone_number"
            android:inputType="phone"
            android:text="@string/edittext_1_234_567_89"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone"
            tools:ignore="Autofill,UnusedAttribute" />

        <TextView
            android:id="@+id/tvSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_40"
            android:layout_marginTop="@dimen/margin_top_20"
            android:layout_marginBottom="@dimen/dimen_30"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:paddingVertical="@dimen/dimen_10"
            android:text="@string/textview_save_profile"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPhone"
            tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>
