<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="730dp">

    <ImageView
        android:id="@+id/imgBackGround"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_284"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelCome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:text="@string/textview_welcome_back"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintEnd_toEndOf="@+id/imgBackGround"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="@+id/imgBackGround"
        app:layout_constraintTop_toBottomOf="@+id/imgBack" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/width_92"
        android:layout_height="@dimen/height_30"
        android:layout_marginStart="@dimen/margin_start_40dp"
        android:layout_marginTop="@dimen/margin_top_68"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_40dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview_please_login_to_continue"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/imgBackGround"
        app:layout_constraintTop_toBottomOf="@+id/imgBackGround" />

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:text="@string/textview_email_address"
        app:layout_constraintStart_toStartOf="@+id/tvContinue"
        app:layout_constraintTop_toBottomOf="@+id/tvContinue" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint_email_address"
        android:inputType="textEmailAddress"
        android:paddingEnd="@dimen/dimen_190"
        android:text="@string/edittext_user_email_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBio"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvPrivateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/margin_top_12"
        android:text="@string/textview_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_12"
        android:text="@string/textview_forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint_password"
        android:inputType="textPassword"
        android:paddingEnd="@dimen/dimen_190"
        android:text="@string/edittext_12345678"
        android:textSize="@dimen/textsize_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivateInfo"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_20"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dimen_140"
        android:paddingVertical="@dimen/margin_top_12"
        android:text="@string/textview_login"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:text="@string/textview_new_to_scatch"
        android:textSize="@dimen/textsize_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_20"
        android:gravity="center"
        android:text="@string/textview_create_account_here"
        android:textColor="@color/color_green"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreate" />

</androidx.constraintlayout.widget.ConstraintLayout>
