<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBackGround"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_284"
            android:scaleType="centerCrop"
            android:src="@drawable/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtStartFromScratch"
            android:layout_width="@dimen/width_304"
            android:layout_height="@dimen/height_64"
            android:layout_marginTop="@dimen/heigth_32"
            android:text="@string/textview_start_nfrom_scratch"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtBack"
            app:layout_constraintTop_toBottomOf="@+id/txtBack" />

        <ImageView
            android:id="@+id/txtBack"
            android:layout_width="@dimen/width_92"
            android:layout_height="@dimen/heigth_32"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:layout_marginTop="@dimen/top_72"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtContinue"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_24"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_create_account_to_countinue"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintStart_toStartOf="@+id/txtBack"
            app:layout_constraintTop_toBottomOf="@+id/imgBackGround" />

        <TextView
            android:id="@+id/txtFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_fullname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtContinue" />

        <EditText
            android:id="@+id/editFullName"
            android:layout_width="@dimen/width_324"
            android:layout_height="@dimen/height_64"
            android:text="@string/edittext_fullname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFullName" />

        <TextView
            android:id="@+id/txtBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_email_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editFullName" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="@dimen/width_324"
            android:layout_height="@dimen/height_64"
            android:text="@string/edittext_user_email_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBio" />


        <TextView
            android:id="@+id/txtPrivateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_40dp"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/textview_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="@dimen/width_324"
            android:layout_height="@dimen/height_64"
            android:inputType="textPassword"
            android:text="@string/edittext_12345678"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPrivateInfo" />

        <TextView
            android:id="@+id/txtCreateAccount"
            android:layout_width="@dimen/width_324"
            android:layout_height="@dimen/height_52"
            android:layout_marginTop="@dimen/margin_top_20"
            android:background="@drawable/custum_button"
            android:gravity="center"
            android:text="@string/textview_create_account"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <TextView
            android:id="@+id/txtCreateAnAccount"
            android:layout_width="@dimen/width_172"
            android:layout_height="@dimen/height_24"
            android:layout_marginTop="@dimen/margin_top_12"
            android:gravity="center"
            android:text="@string/textview_already_have_an_account"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCreateAccount" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="@dimen/width_140"
            android:layout_height="@dimen/heigth_32"
            android:gravity="center"
            android:text="@string/textview_login_here"
            android:textColor="@color/color_green"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/margin_start_40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCreateAnAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>