<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen_10"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_4"
        android:src="@drawable/ic_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        tools:text="@string/edittext_fullname"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBackGround"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_378"
        android:layout_marginTop="@dimen/dimen_8"
        android:src="@drawable/ic_chocola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />

    <ImageView
        android:id="@+id/imgLike"
        android:layout_width="@dimen/dimen_40"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBackGround" />

    <ImageView
        android:id="@+id/imgComment"
        android:layout_width="@dimen/dimen_40"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        android:src="@drawable/ic_comment"
        app:layout_constraintStart_toEndOf="@id/imgLike"
        app:layout_constraintTop_toBottomOf="@id/imgBackGround" />

    <ImageView
        android:id="@+id/imgShare"
        android:layout_width="@dimen/dimen_40"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        android:src="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@id/imgComment"
        app:layout_constraintTop_toBottomOf="@id/imgBackGround" />

    <TextView
        android:id="@+id/tvStraight"
        android:layout_width="@dimen/dimen_300"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_28"
        android:background="@drawable/straight"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgShare" />

    <ImageView
        android:id="@+id/imgFavorite"
        android:layout_width="@dimen/dimen_15"
        android:layout_height="@dimen/dimen_15"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="@dimen/width_8"
        android:gravity="center"
        android:src="@drawable/ic_favorite_black_24dp"
        tools:text="@string/textview_likes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStraight" />

    <TextView
        android:id="@+id/tvLikeNumber"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30"
        android:layout_marginEnd="@dimen/dimen_250"
        android:gravity="center"
        android:text="@string/textview_like"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/imgFavorite"
        app:layout_constraintTop_toBottomOf="@id/tvStraight" />

    <TextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        tools:text="@string/textview_chocola"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLikeNumber" />

    <TextView
        android:id="@+id/tvPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20"
        tools:text="@string/textview_comment"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodName"
        app:layout_constraintVertical_bias="0.147" />

</androidx.constraintlayout.widget.ConstraintLayout>
